# esports-fair-odds1

./: .gitignore  AGENTS.md  MIGRATION.md  README.md  app11.py  app16.py  app28.py  app35_ml.py  app35_ml1.py  app35_ml13.py  app35_ml4.py  app35_ml9.py  app35_ml_wide_chart_keep_bo3.py  app4.py  app7.py  app_dota.py  blast_rankings.csv  calibrate_inplay_kappa.py  dota2_full_team_list.csv  dota2_gosu_rankings.csv  dual_team_fair_odds_app.py  gosu_dota_scraper.py  gosu_rankings_scraper_v4.py  inplay_kappa_logs_clean.csv  kappa_calibration.json  kappa_calibration_report.json  map_dota_team_ids.py  market.json  probe_gosu_rankings.py  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  reset_dev.cmd  run_use.cmd  scraper.py  unmatched_cs2_teams.csv
.streamlit/: config.toml
ML/: train_kappa_calibration.py  train_kappa_calibration1.py  train_kappa_calibration2.py  train_kappa_calibration4.py  train_prob_calibration.py  train_prob_calibration1.py
adapters/: __init__.py
automation/: AUTOMATION_RUN_POLICY.md  BANKED_INITIATIVES.md  FIRST_RUN_OPERATOR_GUIDE.md  INITIATIVE_RUN_POLICY.md  PROMOTED_INITIATIVES.md  README.md  validate_initiative_proposal.py
backend/: __init__.py  deps.py  main.py
bo3.gg/: __init__.py  poller.py
config/: cf_state.json  inplay_strategies.json  kappa_calibration.json  kappa_calibration_report.json  p_calibration.json  p_calibration_report.json
configs/: inplay_strategies.json
docs/: ENGINE_BIBLE_Chapter1.md  ENGINE_BIBLE_WITH_TOC_CH1-10.md  ENGINE_BIBLE_WITH_TOC_CH1-12.md  ENGINE_BIBLE_WITH_TOC_CH1-12_TOC_FIXED.md  (+13 more)
(+465 files in other folders)
