[project]
name = "esports-fair-odds"
version = "0.1.0"
description = "Esports fair odds calculator (CS2 + Dota2)"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line too long - black handles this
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"app35_ml.py" = ["E402"]  # Streamlit/asyncio require imports after set_page_config and fix

[tool.ruff.lint.isort]
known-first-party = ["fair_odds"]
